# Backend_martkeplace

./: .env  .env.example  README.md  docker-compose.yaml  index.py  pyproject.toml
backend/services/admin_service/: Dockerfile
backend/services/admin_service/src/: main.py
backend/services/api_gateway/: .dockerignore  Dockerfile  pyproject.toml
backend/services/api_gateway/docs/: forum_api.md
backend/services/api_gateway/src/: main.py
backend/services/api_gateway/src/config/: __init__.py  config.py
backend/services/auth_service/: Dockerfile  migration.py  pyproject.toml
backend/services/auth_service/config/: __init__.py  config.py
backend/services/auth_service/database/: __init__.py  crud.py  db.py  models.py
backend/services/auth_service/jwt/: __init__.py  jwt.py
backend/services/auth_service/src/: __init__.py  endpoints.py
backend/services/auth_service/src/utils/: __init__.py  telegram_notifications.py
backend/services/file_service/: Dockerfile  requirements.txt
backend/services/file_service/src/: main.py
backend/services/forum_service/: Dockerfile  README.md  __init__.py  alembic.ini  check_images.py  pyproject.toml
backend/services/forum_service/config/: settings.py
backend/services/forum_service/database/: database.py  init_db.py  models.py
backend/services/forum_service/database/migrations/: create_post_reports.py  env.py
backend/services/forum_service/src/: __init__.py  main.py
backend/services/forum_service/src/routers/: __init__.py  categories.py  posts.py  topics.py
backend/services/forum_service/src/schemas/: __init__.py  category.py  common.py  notification.py  post.py  topic.py
backend/services/forum_service/src/utils/: __init__.py  auth.py  dependencies.py  pagination.py  telegram_notifications.py
backend/services/gallery_service/: Dockerfile  FRONTEND_API.md  QUICKSTART.md  README.md  requirements.txt
backend/services/gallery_service/database/: database.py  models.py
backend/services/gallery_service/src/: main.py
backend/services/gallery_service/src/routers/: comments.py  galleries.py  reactions.py
backend/services/gallery_service/src/schemas/: comment.py  gallery.py
backend/services/gallery_service/src/utils/: auth.py
backend/services/mail_service/: Dockerfile  pyproject.toml
backend/services/mail_service/src/: main.py
backend/services/marketplace_service/: Dockerfile  pyproject.toml
backend/services/marketplace_service/config/: __init__.py  config.py
backend/services/marketplace_service/database/: __init__.py  crud.py  db.py  migrations.py  models.py
backend/services/marketplace_service/src/: endpoints.py  main.py
backend/services/news_service/: Dockerfile  requirements.txt
backend/services/news_service/src/: database.py  init_db.py  main.py  models.py  schemas.py
backend/services/post_service/: Dockerfile  pyproject.toml
backend/services/post_service/config/: __init__.py  config.py
backend/services/post_service/database/: __init__.py  crud.py  migrations.py  models.py
backend/services/post_service/src/: endpoints.py  main.py
backend/services/post_service/src/utils/: __init__.py  telegram_notifications.py
backend/services/redis_service/: Dockerfile  pyproject.toml
backend/services/redis_service/config/: __init__.py  config.py
backend/services/redis_service/src/: main.py
backend/services/user_service/: Dockerfile  create_tables.py  migration.py  pyproject.toml
backend/services/user_service/config/: __init__.py  config.py
backend/services/user_service/database/: __init__.py  crud.py  database.py  models.py
backend/services/user_service/src/: endpoints.py  main.py
