[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forum_service"
version = "0.1.0"
description = "Forum Service for Fishing Website"
authors = [
    {name = "Developer", email = "example@example.com"},
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.26.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.5.0",
    "asyncpg>=0.29.0",
    "websockets>=12.0.0",
    "httpx>=0.26.0",
    "python-multipart>=0.0.6",
    "pyjwt>=2.8.0",
    "pillow>=10.2.0",
    "aioredis>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]

[tool.setuptools]
packages = ["src"] 