[tool.poetry]
name = "mail_service"
version = "0.1.0"
description = "Mail service for sending emails"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.27.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.9"
email-validator = "^2.1.0"
python-dotenv = "^1.0.0"
aiosmtplib = "^3.0.1"
jinja2 = "^3.1.3"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 